Improve stylesheet handling with PCI's

--- a/public/assets/pci/pci.html
+++ b/public/assets/pci/pci.html
@@ -139,123 +139,125 @@ const QTI_PCI_API = {
   height: 0,
   onQtiInteractionChanged: null,
 
-  getInstance: function () {
+  getInstance () {
     return this.instance;
   },
 
-  setInstance: function (instance) {
+  setInstance (instance) {
     this.instance = instance;
   },
 	
-  getTypeIdentifier: function () {
+  getTypeIdentifier () {
 	  return this.typeIdentifier;
   },
 	
-  setTypeIdentifier: function (typeIdentifier) {
+  setTypeIdentifier (typeIdentifier) {
 	  this.typeIdentifier = typeIdentifier;
   },
 	
-  getResponseIdentifier: function () {
+  getResponseIdentifier () {
 	  return this.responseIdentifier;
   },
 
-  setResponseIdentifier: function (responseIdentifier) {
+  setResponseIdentifier (responseIdentifier) {
 	  this.responseIdentifier = responseIdentifier;
   },
 
-  getPci: function () {
+  getPci () {
 	  return this.pci;
   },
 
-  setPci: function (pci) {
+  setPci (pci) {
 	  this.pci = pci;
   },
 
-  getDom: function () {
+  getDom () {
 	  return this.dom;
   },
 
-  setDom: function (dom) {
+  setDom (dom) {
 	  this.dom = dom;
   },
 
-  getProperties: function () {
+  getProperties () {
 	  return this.properties;
   },
 
-  setProperties: function (properties) {
+  setProperties (properties) {
 	  this.properties = properties;
   },
 
-  getContextVariables: function () {
+  getContextVariables () {
 	  return this.contextVariables;
   },
 
-  setContextVariables: function (contextVariables) {
+  setContextVariables (contextVariables) {
 	  this.contextVariables = contextVariables;
   },
 
-  getTemplateVariables: function () {
+  getTemplateVariables () {
 	  return this.templateVariables;
   },
 
-  setTemplateVariables: function (templateVariables) {
+  setTemplateVariables (templateVariables) {
 	  this.templateVariables = templateVariables;
   },
 
-  getStylesheets: function () {
+  getStylesheets () {
 	  return this.stylesheets;
   },
 
-  setStylesheets: function (stylesheets) {
-	  this.stylesheets = stylesheets;
+  setStylesheets (stylesheets) {
+    if (typeof stylesheets === 'undefined') return;
+    this.stylesheets = stylesheets;
   },
 
-  getCatalogInfo: function () {
+  getCatalogInfo () {
     return this.catalogInfo;
   },
 
-  setCatalogInfo: function (catalogInfo) {
+  setCatalogInfo (catalogInfo) {
+    if (typeof catalogInfo === 'undefined') return;
     this.catalogInfo = catalogInfo;
   },
 
-  getBoundTo: function () {
+  getBoundTo () {
     return this.boundTo;
   },
 
-  setBoundTo: function (boundTo) {
+  setBoundTo (boundTo) {
     this.boundTo =  boundTo;
   },
 
-  getStatus: function () {
+  getStatus () {
     return this.status;
   },
 
-  setStatus: function (status) {
+  setStatus (status) {
     this.status = status;
   },
 
-  getModuleResolution: function () {
+  getModuleResolution () {
 	  return this.moduleResolution;
   },
 	
-  setModuleResolution: function (moduleResolution) {
+  setModuleResolution (moduleResolution) {
 	  this.moduleResolution = moduleResolution;
   },
 
-  getState: function () {
+  getState () {
 	  return this.state;
   },
 
-  setState: function (state) {
+  setState (state) {
 	  this.state = (typeof state === 'undefined') ? null : JSON.parse(state);
   },
 
-  getStateFromState: function () {
+  getStateFromState () {
 	  return (this.state === null) ? null : this.state.state;
   },
 
-  getResponseFromState: function () {
+  getResponseFromState () {
     return (this.state === null) ? undefined : this.state.response;
   },
 
@@ -264,7 +266,7 @@ const QTI_PCI_API = {
    * Upon completion, call NotifyPciStateReady, passing the 
    * stringified response and state as parameters.
    */
-  getInteractionState: function () {
+  getInteractionState () {
     const obj = {
       response: null,
       state: null
@@ -283,7 +285,7 @@ const QTI_PCI_API = {
     this.NotifyPciStateReady(JSON.stringify(obj));
   },
 
-  initialize: function (pci) {
+  initialize (pci) {
     this.setDom(document.getElementById('qti3-player-pci-element'));
     this.setPci(pci);
     this.setTypeIdentifier(pci.typeIdentifier);
@@ -314,13 +316,13 @@ const QTI_PCI_API = {
     );
   },
 
-  injectClassAttribute: function () {
+  injectClassAttribute () {
     if (this.getPci().classAttribute.length == 0) return
     let wrapperEl = document.getElementById('qti3-player-pci-wrapper');
     wrapperEl.classList.add(this.getPci().classAttribute);
   },
 
-  injectMarkup: function () {
+  injectMarkup () {
     this.getDom().innerHTML =
       `<div
         id="qti3-player-pci-markup"
@@ -328,7 +330,7 @@ const QTI_PCI_API = {
        >${this.getPci().markup}</div>`;
   },
 
-  injectStylesheets: function () {
+  injectStylesheets () {
     const stylesheets = this.getStylesheets();
     if (stylesheets === null) return;
     stylesheets.forEach((stylesheet) => {
@@ -342,7 +344,7 @@ const QTI_PCI_API = {
     });
   },
 
-  getModuleDependencies: function () {
+  getModuleDependencies () {
     // Init qtiCustomInteractionContext as the first dependency
     let dependencies = ['qtiCustomInteractionContext'];
 
@@ -368,7 +370,7 @@ const QTI_PCI_API = {
    * @param {Object} boundTo The response variable this PCI is bound to and its value
    * @param {String} status Item lifecycle status; e.g., 'interacting'
    */
-  launchPci: function (
+  launchPci (
       typeIdentifier,
       dom,
       responseIdentifier,
@@ -409,7 +411,7 @@ const QTI_PCI_API = {
     });
   },
 
-  NotifyPciChildLoaded: function () {
+  NotifyPciChildLoaded () {
     if (self == top) return;
 
     // Extract the identifier qs param
@@ -419,7 +421,7 @@ const QTI_PCI_API = {
     window.parent.postMessage({ message: 'PciChildLoaded', identifier: this.getResponseIdentifier(), success: true },'*');
   },
 
-  NotifyPciReady: function (instance, state) {
+  NotifyPciReady (instance, state) {
     this.setInstance(instance);
 
     if (self == top) return;
@@ -432,7 +434,7 @@ const QTI_PCI_API = {
     window.parent.postMessage({ message: 'PciReady', identifier: this.getResponseIdentifier(), width: computedWidth, height: computedHeight, success: true },'*');
   },
 
-  NotifyPciDone: function (instance, response, state, status) {
+  NotifyPciDone (instance, response, state, status) {
     if (self == top) return;
 
     const stringifiedState = JSON.stringify({
@@ -443,12 +445,12 @@ const QTI_PCI_API = {
     window.parent.postMessage({ message: 'PciDone', identifier: this.getResponseIdentifier(), state: stringifiedStateObject, status: status, success: true },'*');
   },
 
-  NotifyPciStateReady: function(stringifiedStateObject) {
+  NotifyPciStateReady (stringifiedStateObject) {
     if (self == top) return;
     window.parent.postMessage({ message: 'PciGetState_Reply', identifier: this.getResponseIdentifier(), state: stringifiedStateObject, success: true },'*');
   },
 
-  NotifyPciInteractionChanged: function(valid, value) {
+  NotifyPciInteractionChanged (valid, value) {
     if (self == top) return;
 
     const stringifiedState = JSON.stringify({
@@ -465,7 +467,7 @@ const QTI_PCI_API = {
    * @method getQueryParameterByName
    * @param {String} name The name of the paramter to get from the URL.
    */
-  getQueryParameterByName: function (name) {
+  getQueryParameterByName (name) {
     let regex = new RegExp("[\\?&]" + name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]') + '=([^&#]*)');
     let results = regex.exec(window.location.search);
 
@@ -474,7 +476,7 @@ const QTI_PCI_API = {
     return decodeURIComponent(results[1].replace(/\+/g, " "));
   },
 
-  bindWindowEventListener: function (element, eventName, eventHandler) {
+  bindWindowEventListener (element, eventName, eventHandler) {
     if (element.addEventListener) {
       element.addEventListener(eventName, eventHandler, false);
     } else if (element.attachEvent) {
@@ -483,7 +485,7 @@ const QTI_PCI_API = {
     }
   },
 
-  trackResize: function (element) {
+  trackResize (element) {
     // create a mutation observer instance
     let observer = new MutationObserver(function(mutations) {
       mutations.forEach(function(mutation) {
@@ -510,12 +512,12 @@ const QTI_PCI_API = {
     });
   },
 
-  trackQtiInteractionChanged: function (domElement) {
+  trackQtiInteractionChanged (domElement) {
     this.onQtiInteractionChanged = this.onQtiInteractionChangedHandler.bind(this);
     domElement.addEventListener('qti-interaction-changed', this.onQtiInteractionChanged);
   },
 
-  onQtiInteractionChangedHandler: function(event) {
+  onQtiInteractionChangedHandler (event) {
     event.preventDefault();
 
     if (typeof event.detail === 'undefined') {
