--- a/public/assets/pci/pci.html
+++ b/public/assets/pci/pci.html
@@ -122,7 +122,7 @@ let qtiCustomInteractionContext = {
    * @param {Object} instance The Custom Interaction Instance.
    * @param {Object} properties Properties is an Object consisting of two properties:
    * {
-   *   pnp: { "access-for-all-pnp": { <afapnp } },
+   *   pnp: { "access-for-all-pnp": { <afapnp> } },
    *   status: "<item lifecycle status>"   // 'initial' | 'interacting' | 'closed' | 'review' | 'solution'
    * }
    */
