--- a/public/assets/pci/pci.html
+++ b/public/assets/pci/pci.html
@@ -118,7 +118,7 @@ let qtiCustomInteractionContext = {
    * getInstance.  
    * If the PCI is interested in being notified it will provide a function
    * to implement setRenderingProperties.
-
+   *
    * @param {Object} instance The Custom Interaction Instance.
    * @param {Object} properties Properties is an Object consisting of two properties:
    * {
@@ -131,6 +131,21 @@ let qtiCustomInteractionContext = {
       console.log('[PCI Context] Interaction SetRenderingProperties:', properties)
       instance.setRenderingProperties(properties)
     }
+  },
+
+  /**
+   * Allow the delivery engine to check the validity of PCI instance.
+   * If the PCI provides a checkValidity function then use that function.
+   * Otherwise, return boolean true (is valid).
+   * @param {Object} instance The Custom Interaction Instance.
+   */
+  checkValidity (instance) {
+    let isValid = false
+    if ((typeof instance.checkValidity !== 'undefined') && typeof instance.checkValidity == 'function') {
+      isValid = instance.checkValidity()
+    }
+    console.log('[PCI Context] Interaction checkValidity:', isValid)
+    QTI_PCI_API.NotifyPciCheckValidity(isValid)
   }
 }
 
@@ -474,6 +489,10 @@ const QTI_PCI_API = {
     qtiCustomInteractionContext.setRenderingProperties(this.getInstance(), properties)
   },
 
+  checkValidity () {
+    qtiCustomInteractionContext.checkValidity(this.getInstance())
+  },
+
   NotifyPciChildLoaded () {
     if (self == top) return
 
@@ -513,6 +532,11 @@ const QTI_PCI_API = {
     window.parent.postMessage({ message: 'PciGetState_Reply', identifier: this.getResponseIdentifier(), state: stringifiedStateObject, success: true },'*')
   },
 
+  NotifyPciCheckValidity (valid) {
+    if (self == top) return
+    window.parent.postMessage({ message: 'PciCheckValidity_Reply', identifier: this.getResponseIdentifier(), valid: valid, success: true },'*')
+  },
+
   NotifyPciInteractionChanged (valid, value) {
     if (self == top) return
 
@@ -522,7 +546,7 @@ const QTI_PCI_API = {
     })
 
     window.parent.postMessage({ message: 'PciInteractionChanged', identifier: this.getResponseIdentifier(), state: stringifiedStateObject, success: true },'*')
-  },  
+  },
 
   /**
    * @description Generic function for parsing URL params.
@@ -636,6 +660,10 @@ window.onload = (event) => {
 
       case 'PciSetRenderingProperties':
         QTI_PCI_API.setRenderingProperties(e.data.properties)
+        break
+
+      case 'PciCheckValidity_Request':
+        QTI_PCI_API.checkValidity()
         break
 
       default:
