--- a/public/assets/pci/pci.html
+++ b/public/assets/pci/pci.html
@@ -610,12 +610,12 @@ const QTI_PCI_API = {
       return
     }
 
-    // event.detail has four required properties:
+    // event.detail has two required properties and two optional properties
     // {
-    //   interaction: <instance>,
-    //   responseIdentifier: <interaction response identifer>,
-    //   valid: <validity boolean>,
-    //   value: <response value>
+    //   interaction: <instance>, (req)
+    //   responseIdentifier: <interaction response identifer>, (req)
+    //   valid: <validity boolean>, (opt)
+    //   value: <response value> (opt)
     // }
     if (typeof event.detail.interaction === 'undefined') {
       console.log('[QtiInteractionChanged][Engine][Module Error]: event detail is missing required "interaction" property', event.detail)
@@ -625,15 +625,6 @@ const QTI_PCI_API = {
       console.log('[QtiInteractionChanged][Engine][Module Error]: event detail is missing required "responseIdentifier" property', event.detail)
       return
     }
-    if (typeof event.detail.valid === 'undefined') {
-      console.log('[QtiInteractionChanged][Engine][Module Error]: event detail is missing required "valid" property', event.detail)
-      return
-    }
-    if (typeof event.detail.value === 'undefined') {
-      console.log('[QtiInteractionChanged][Engine][Module Error]: event detail is missing required "value" property', event.detail)
-      return
-    }
-
     console.log('[QtiInteractionChanged][Engine]', event.detail)
     this.NotifyPciInteractionChanged(event.detail.valid, event.detail.value)
   }
